--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,11 @@ Authors@R: c(
 Description: Vignettes and data to support the first Bioconductor Asia
     / Pacific meeting, held in 2015 in Tokyo, Japan.
 Imports: BiocInstaller
-Suggests: BiocStyle, knitr
+Suggests: BiocStyle, knitr AnnotationHub, BSgenome.Hsapiens.UCSC.hg19,
+    BiocParallel, Biostrings, DESeq2, GenomicAlignments, GenomicFiles,
+    GenomicRanges, Gviz, Homo.sapiens, IRanges,
+    RNAseqData.HNRNPC.bam.chr14, Rsamtools,
+    TxDb.Hsapiens.UCSC.hg19.knownGene, VariantAnnotation, airway,
+    biomaRt, ggplot2, org.Hs.eg.db, rtracklayer, shiny
 License: Artistic-2.0
 VignetteBuilder: knitr
