--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: BiocAsiaPacific2015
 Type: Package
 Title: R / Bioconductor Material for Bioconductor Asia/Pacific Short
     Course, Developer Meeting, and Presentation
-Version: 0.0.6
+Version: 0.0.7777777
 Authors@R: c(
     person("Martin", "Morgan", role="cre",
         email="mtmorgan@fredhutch.org"))
